k8s/21-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: social
spec:
  serviceName: mongo
  replicas: 1
  selector: { matchLabels: { app: mongo } }
  template:
    metadata: { labels: { app: mongo } }
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports: [{ containerPort: 27017 }]
          volumeMounts:
            - name: data
              mountPath: /data/db
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: mongo-data }
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: social
spec:
  selector: { app: mongo }
  ports: [{ port: 27017, targetPort: 27017 }]
